Fixes various warnings, mostly ones about performance.